--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation 'org.json:json:20240303'
 }
 
 test {
