Swerve modules rearranged, PID controllers setup from configs

--- a/src/main/deploy/DrivetrainConfig.json
+++ b/src/main/deploy/DrivetrainConfig.json
@@ -1,22 +1,22 @@
 {
 "swerveModules": [
   {
-    "name": "One FL",
+    "name": "One FR",
     "steer": {
       "can": 2,
-      "kP": 1.55,
+      "kP": 1.35,
       "kI": 0.05,
-      "kD": 0,
-      "kS": 1.0,
-      "kV": 0.5,
+      "kD": 0.01,
+      "kS": 0,
+      "kV": 0,
       "kA": 0
     },
     "drive": {
       "can": 3,
-      "kP": 1.55,
-      "kI": 0.05,
+      "kP": 1.0,
+      "kI": 0,
       "kD": 0,
-      "kS": 1.0,
+      "kS": 0,
       "kV": 2.0,
       "kA": 0
     },
@@ -26,27 +26,57 @@
     },
     "location": {
       "x": 0.292,
-      "y": 0.292
+      "y": -0.292
     }
   },
 
   {
-    "name": "Two BL",
+    "name": "Two BR",
+    "steer": {
+      "can": 4,
+      "kP": 1.35,
+      "kI": 0.05,
+      "kD": 0.01,
+      "kS": 0,
+      "kV": 0,
+      "kA": 0
+    },
+    "drive": {
+      "can": 5,
+      "kP": 1.0,
+      "kI": 0,
+      "kD": 0,
+      "kS": 0,
+      "kV": 2.0,
+      "kA": 0
+    },
+    "encoder": {
+      "can": 11,
+      "offset": 2.1107
+    },
+    "location": {
+      "x": -0.292,
+      "y": -0.292
+    }
+  },
+
+  {
+    "name": "Three BL",
     "steer": {
       "can": 6,
-      "kP": 1.55,
+      "kP": 1.35,
       "kI": 0.05,
-      "kD": 0,
-      "kS": 1.0,
-      "kV": 0.5,
+      "kD": 0.01,
+      "kS": 0,
+      "kV": 0,
       "kA": 0
     },
     "drive": {
       "can": 7,
-      "kP": 1.55,
-      "kI": 0.05,
+      "kP": 1.0,
+      "kI": 0,
       "kD": 0,
-      "kS": 1.0,
+      "kS": 0,
       "kV": 2.0,
       "kA": 0
     },
@@ -61,22 +91,22 @@
   },
 
   {
-    "name": "Three BR",
+    "name": "Four FL",
     "steer": {
       "can": 8,
-      "kP": 1.55,
+      "kP": 1.35,
       "kI": 0.05,
-      "kD": 0,
-      "kS": 1.0,
-      "kV": 0.5,
+      "kD": 0.01,
+      "kS": 0,
+      "kV": 0,
       "kA": 0
     },
     "drive": {
       "can": 9,
-      "kP": 1.55,
-      "kI": 0.05,
+      "kP": 1.0,
+      "kI": 0,
       "kD": 0,
-      "kS": 1.0,
+      "kS": 0,
       "kV": 2.0,
       "kA": 0
     },
@@ -85,38 +115,8 @@
       "offset": 0.56143
     },
     "location": {
-      "x": -0.292,
-      "y": -0.292
-    }
-  },
-
-  {
-    "name": "Four FR",
-    "steer": {
-      "can": 4,
-      "kP": 1.55,
-      "kI": 0.05,
-      "kD": 0,
-      "kS": 1.0,
-      "kV": 0.5,
-      "kA": 0
-    },
-    "drive": {
-      "can": 5,
-      "kP": 1.55,
-      "kI": 0.05,
-      "kD": 0,
-      "kS": 1.0,
-      "kV": 2.0,
-      "kA": 0
-    },
-    "encoder": {
-      "can": 11,
-      "offset": 2.1107
-    },
-    "location": {
-      "x":  0.292,
-      "y": -0.292
+      "x": 0.292,
+      "y": 0.292
     }
   }
 ]
