--- a/src/main/deploy/DrivetrainConfigShowstoperr.json
+++ b/src/main/deploy/DrivetrainConfigShowstoperr.json
@@ -25,7 +25,7 @@
     },
     "encoder": {
       "can": 10,
-      "offset": -2.856
+      "offset": -0.454546517470453
     },
     "location": {
       "x": 0.292,
@@ -58,7 +58,7 @@
     },
     "encoder": {
       "can": 11,
-      "offset": 2.1107
+      "offset": 0.335928338384064
     },
     "location": {
       "x": -0.292,
@@ -91,7 +91,7 @@
     },
     "encoder": {
       "can": 12,
-      "offset": 1.7855
+      "offset": 0.284171150890579
     },
     "location": {
       "x": -0.292,
@@ -124,7 +124,7 @@
     },
     "encoder": {
       "can": 13,
-      "offset": 0.56143
+      "offset": 0.0893543597000828
     },
     "location": {
       "x": 0.292,
