--- a/build.gradle
+++ b/build.gradle
@@ -73,8 +73,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    // https://mvnrepository.com/artifact/org.json/json
-    implementation 'org.json:json:20240303'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 test {
