--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,6 @@ compile_commands.json
 
 # Eclipse generated file for annotation processors
 .factorypath
+
+# Custom misc files and directories that must be ignored
+.Glass/
