Unified IMU class (Pigeon or NavX)

--- a/src/main/deploy/config/DrivetrainConfigPrototypERR.json
+++ b/src/main/deploy/config/DrivetrainConfigPrototypERR.json
@@ -1,4 +1,9 @@
 {
+"robotPhysics": {
+  "maxAcceleration": 2,
+  "maxSpeed": 3,
+  "maxTurnRate": 3.14
+},
 "externalGyro": {
   "type": "Pigeon2",
   "can": {"id": 1, "bus": "Cancun"}
