--- a/src/main/deploy/config/DrivetrainConfigPrototypERR.json
+++ b/src/main/deploy/config/DrivetrainConfigPrototypERR.json
@@ -1,12 +1,13 @@
 {
 "robotPhysics": {
   "maxAcceleration": 2,
-  "maxSpeed": 3,
-  "maxTurnRate": 3.14
+  "maxSpeed": 4,
+  "maxTurnRate": 10,
+  "maxTurnAcceleration": 2.5
 },
 "externalGyro": {
   "type": "Pigeon2",
-  "can": {"id": 1, "bus": "Cancun"}
+  "can": {"id": 23, "bus": "rio"}
 },
 "swerveModules": [
   {
